updated conservation.html layout

--- a/conservation.html
+++ b/conservation.html
@@ -1,39 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Conserving Pakistan’s Native Livestock Breeds</title>
-  <link rel="stylesheet" href="styles.css" />
   <style>
-    article {
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 1rem;
-      background: white;
-      border-radius: 8px;
-    }
-    article h1, h2, h3 {
-      color: #333;
-    }
-    article p {
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f5f5f5;
+      margin: 0;
+      padding: 0;
       line-height: 1.6;
     }
-    article ul {
-      margin-left: 2rem;
+
+    header {
+      background: #006400;
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    header p {
+      font-size: 1.2rem;
+    }
+
+    article {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    }
+
+    article h1, article h2 {
+      color: #2a2a2a;
+      margin-top: 2rem;
+    }
+
+    article img {
+      width: 100%;
+      max-height: 400px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin: 1rem 0;
+    }
+
+    .caption {
+      font-size: 0.9rem;
+      text-align: center;
+      color: #555;
+      margin-top: -10px;
+      margin-bottom: 20px;
+    }
+
+    ul {
+      margin-left: 1.5rem;
+      padding-left: 1rem;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #333;
+      color: white;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 1.8rem;
+      }
     }
   </style>
 </head>
 <body>
+
   <header>
     <h1>Pakistani Livestock Blog</h1>
     <p>Conservation, Awareness, and Research</p>
   </header>
-
-  <article>
     
 <p class=MsoNormal style='line-height:normal'><b><span style='font-size:24.0pt;
 font-family:"Times New Roman",serif'>Conserving Pakistan’s Native Livestock
 Breeds: An Economic, Ecological, and Cultural Imperative</span></b></p>
+
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Sahiwal_bull.jpg/800px-Sahiwal_bull.jpg" alt="Sahiwal Bull" />
+    <div class="caption">Sahiwal cattle – Pakistan’s premier dairy breed known for high milk yield and heat tolerance.</div>
+
 
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>Pakistan
 is home to a rich diversity of livestock breeds – from hardy humped cattle
@@ -48,6 +106,10 @@ can be done to safeguard these invaluable animals.</span></p>
 
 <p class=MsoNormal style='line-height:normal'><b><span style='font-size:18.0pt;
 font-family:"Times New Roman",serif'>Economic Significance of Indigenous Breeds</span></b></p>
+
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Nili-ravi_buffalo_bull.jpg/800px-Nili-ravi_buffalo_bull.jpg" alt="Nili-Ravi Buffalo" />
+    <div class="caption">Nili-Ravi buffalo – famed for producing rich, creamy milk essential to traditional dairy products.</div>
+
 
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>Livestock
 plays a <b>vital role in Pakistan’s economy and food security</b>. Over <b>8
@@ -112,6 +174,11 @@ about heritage – it makes sound economic sense.</span></p>
 <p class=MsoNormal style='line-height:normal'><b><span style='font-size:18.0pt;
 font-family:"Times New Roman",serif'>Ecological and Environmental Importance</span></b></p>
 
+
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Kamori_Goat_Pakistan.jpg/800px-Kamori_Goat_Pakistan.jpg" alt="Kamori Goat" />
+    <div class="caption">Kamori goat – a dual-purpose breed known for beauty and milk production, native to Sindh.</div>
+
+
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>Beyond
 economics, <b>native livestock breeds are ecologically invaluable</b>. Over
 centuries, Pakistan’s cattle, buffaloes, goats and sheep have been naturally or
@@ -174,6 +241,10 @@ conservation of indigenous livestock alongside crops.</span></p>
 
 <p class=MsoNormal style='line-height:normal'><b><span style='font-size:18.0pt;
 font-family:"Times New Roman",serif'>Cultural and Heritage Value</span></b></p>
+
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Makhi_Cheeni_goats.jpg/800px-Makhi_Cheeni_goats.jpg" alt="Makhi Cheeni Goats" />
+    <div class="caption">Makhi Cheeni goats – highly prized for their unique appearance and festive value during Eid.</div>
+
 
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>Livestock
 are deeply woven into the <b>cultural fabric of Pakistan</b>. For rural
@@ -313,6 +384,10 @@ with the mainstream livestock development programs.</span></p>
 <p class=MsoNormal style='line-height:normal'><b><span style='font-size:18.0pt;
 font-family:"Times New Roman",serif'>Gaps in Conservation Strategies and
 Consequences of Neglect</span></b></p>
+
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Tharparkar_Cattle_Breed.jpg/800px-Tharparkar_Cattle_Breed.jpg" alt="Tharparkar Cattle" />
+    <div class="caption">Tharparkar cattle – essential to desert economies, adapted to high heat and scarce water.</div>
+
 
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>A
 critical look at Pakistan’s current approach reveals several <b>gaps in its
