updated conservation.html layout

--- a/conservation.html
+++ b/conservation.html
@@ -89,9 +89,9 @@
 font-family:"Times New Roman",serif'>Conserving Pakistan’s Native Livestock
 Breeds: An Economic, Ecological, and Cultural Imperative</span></b></p>
 
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Sahiwal_bull.jpg/800px-Sahiwal_bull.jpg" alt="Sahiwal Bull" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Sahiwal-_breed_cow_at_the_dairy_unit_attached_to_Bhai_Ram_Singh_Memorial_%28Gurudwara%29_%2C_Bhaini_Sahib_%2CLudhyana%2C_Punjab_%2CIndia.JPG/1280px-Sahiwal-_breed_cow_at_the_dairy_unit_attached_to_Bhai_Ram_Singh_Memorial_%28Gurudwara%29_%2C_Bhaini_Sahib_%2CLudhyana%2C_Punjab_%2CIndia.JPG" alt="Sahiwal Bull" />
     <div class="caption">Sahiwal cattle – Pakistan’s premier dairy breed known for high milk yield and heat tolerance.</div>
-
+By <a href="//commons.wikimedia.org/wiki/User:Harvinder_Chandigarh" title="User:Harvinder Chandigarh">Harvinder Chandigarh</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/4.0" title="Creative Commons Attribution-Share Alike 4.0">CC BY-SA 4.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=41627176">Link</a>
 
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>Pakistan
 is home to a rich diversity of livestock breeds – from hardy humped cattle
