updated conservation.html layout

--- a/conservation.html
+++ b/conservation.html
@@ -107,9 +107,9 @@ can be done to safeguard these invaluable animals.</span></p>
 <p class=MsoNormal style='line-height:normal'><b><span style='font-size:18.0pt;
 font-family:"Times New Roman",serif'>Economic Significance of Indigenous Breeds</span></b></p>
 
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Nili-ravi_buffalo_bull.jpg/800px-Nili-ravi_buffalo_bull.jpg" alt="Nili-Ravi Buffalo" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/00/Farms_in_Gujrat%2C_Pakistan.jpg" alt="Nili-Ravi Buffalo" />
     <div class="caption">Nili-Ravi buffalo – famed for producing rich, creamy milk essential to traditional dairy products.</div>
-
+By Kashi Gondal - <a rel="nofollow" class="external text" href="http://www.world66.com/asia/southasia/pakistan/gujrat/lib/gallery/showimage?pic=asia/southasia/pakistan/gujrat/noor_poor_pudday">Gujrat Photo Gallery</a>, <a href="https://creativecommons.org/licenses/by-sa/1.0" title="Creative Commons Attribution-Share Alike 1.0">CC BY-SA 1.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=9015379">Link</a>
 
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>Livestock
 plays a <b>vital role in Pakistan’s economy and food security</b>. Over <b>8
@@ -175,9 +175,9 @@ about heritage – it makes sound economic sense.</span></p>
 font-family:"Times New Roman",serif'>Ecological and Environmental Importance</span></b></p>
 
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Kamori_Goat_Pakistan.jpg/800px-Kamori_Goat_Pakistan.jpg" alt="Kamori Goat" />
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Kamori_with_white.jpg" alt="Kamori Goat" />
     <div class="caption">Kamori goat – a dual-purpose breed known for beauty and milk production, native to Sindh.</div>
-
+By LunaticFringe97 - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=41810854
 
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>Beyond
 economics, <b>native livestock breeds are ecologically invaluable</b>. Over
@@ -242,9 +242,10 @@ conservation of indigenous livestock alongside crops.</span></p>
 <p class=MsoNormal style='line-height:normal'><b><span style='font-size:18.0pt;
 font-family:"Times New Roman",serif'>Cultural and Heritage Value</span></b></p>
 
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Makhi_Cheeni_goats.jpg/800px-Makhi_Cheeni_goats.jpg" alt="Makhi Cheeni Goats" />
-    <div class="caption">Makhi Cheeni goats – highly prized for their unique appearance and festive value during Eid.</div>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Beetal_Goat_Faisalabad_Panjab_Pakistan.jpg/1280px-Beetal_Goat_Faisalabad_Panjab_Pakistan.jpg" alt="Beetal Goat" />
+    <div class="caption">Beetal Goat – highly prized for their hardiness and festive value during Eid.</div>
 
+By Marsmux - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=75230905
 
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>Livestock
 are deeply woven into the <b>cultural fabric of Pakistan</b>. For rural
@@ -385,10 +386,10 @@ with the mainstream livestock development programs.</span></p>
 font-family:"Times New Roman",serif'>Gaps in Conservation Strategies and
 Consequences of Neglect</span></b></p>
 
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Tharparkar_Cattle_Breed.jpg/800px-Tharparkar_Cattle_Breed.jpg" alt="Tharparkar Cattle" />
+    <img src="hhttps://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Tharparkar_01.JPG/1280px-Tharparkar_01.JPG" alt="Tharparkar Cattle Bull" />
     <div class="caption">Tharparkar cattle – essential to desert economies, adapted to high heat and scarce water.</div>
 
-
+By Pavanaja - Own work, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=31865339
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>A
 critical look at Pakistan’s current approach reveals several <b>gaps in its
 strategy for conserving native livestock breeds</b>:</span></p>
