updated conservation.html layout

--- a/conservation.html
+++ b/conservation.html
@@ -386,7 +386,7 @@ with the mainstream livestock development programs.</span></p>
 font-family:"Times New Roman",serif'>Gaps in Conservation Strategies and
 Consequences of Neglect</span></b></p>
 
-    <img src="hhttps://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Tharparkar_01.JPG/1280px-Tharparkar_01.JPG" alt="Tharparkar Cattle Bull" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Tharparkar_01.JPG" alt="Tharparkar Cattle Bull" />
     <div class="caption">Tharparkar cattle – essential to desert economies, adapted to high heat and scarce water.</div>
 
 By Pavanaja - Own work, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=31865339
