--- a/conservation.html
+++ b/conservation.html
@@ -88,10 +88,13 @@
 <p class=MsoNormal style='line-height:normal'><b><span style='font-size:24.0pt;
 font-family:"Times New Roman",serif'>Conserving Pakistan’s Native Livestock
 Breeds: An Economic, Ecological, and Cultural Imperative</span></b></p>
-
+<div class="image-wrapper">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Sahiwal-_breed_cow_at_the_dairy_unit_attached_to_Bhai_Ram_Singh_Memorial_%28Gurudwara%29_%2C_Bhaini_Sahib_%2CLudhyana%2C_Punjab_%2CIndia.JPG/1280px-Sahiwal-_breed_cow_at_the_dairy_unit_attached_to_Bhai_Ram_Singh_Memorial_%28Gurudwara%29_%2C_Bhaini_Sahib_%2CLudhyana%2C_Punjab_%2CIndia.JPG" alt="Sahiwal Bull" />
     <div class="caption">Sahiwal cattle – Pakistan’s premier dairy breed known for high milk yield and heat tolerance.</div>
 By <a href="//commons.wikimedia.org/wiki/User:Harvinder_Chandigarh" title="User:Harvinder Chandigarh">Harvinder Chandigarh</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/4.0" title="Creative Commons Attribution-Share Alike 4.0">CC BY-SA 4.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=41627176">Link</a>
+</div>
+
+
 
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>Pakistan
 is home to a rich diversity of livestock breeds – from hardy humped cattle
@@ -106,10 +109,11 @@ can be done to safeguard these invaluable animals.</span></p>
 
 <p class=MsoNormal style='line-height:normal'><b><span style='font-size:18.0pt;
 font-family:"Times New Roman",serif'>Economic Significance of Indigenous Breeds</span></b></p>
-
+<div class="image-wrapper">
     <img src="https://upload.wikimedia.org/wikipedia/commons/0/00/Farms_in_Gujrat%2C_Pakistan.jpg" alt="Nili-Ravi Buffalo" />
     <div class="caption">Nili-Ravi buffalo – famed for producing rich, creamy milk essential to traditional dairy products.</div>
 By Kashi Gondal - <a rel="nofollow" class="external text" href="http://www.world66.com/asia/southasia/pakistan/gujrat/lib/gallery/showimage?pic=asia/southasia/pakistan/gujrat/noor_poor_pudday">Gujrat Photo Gallery</a>, <a href="https://creativecommons.org/licenses/by-sa/1.0" title="Creative Commons Attribution-Share Alike 1.0">CC BY-SA 1.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=9015379">Link</a>
+</div>
 
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>Livestock
 plays a <b>vital role in Pakistan’s economy and food security</b>. Over <b>8
@@ -174,10 +178,11 @@ about heritage – it makes sound economic sense.</span></p>
 <p class=MsoNormal style='line-height:normal'><b><span style='font-size:18.0pt;
 font-family:"Times New Roman",serif'>Ecological and Environmental Importance</span></b></p>
 
-
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Kamori_with_white.jpg" alt="Kamori Goat" />
+<div class="image-wrapper">
+ <img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Kamori_with_white.jpg" alt="Kamori Goat" />
     <div class="caption">Kamori goat – a dual-purpose breed known for beauty and milk production, native to Sindh.</div>
 By LunaticFringe97 - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=41810854
+</div>
 
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>Beyond
 economics, <b>native livestock breeds are ecologically invaluable</b>. Over
@@ -241,11 +246,12 @@ conservation of indigenous livestock alongside crops.</span></p>
 
 <p class=MsoNormal style='line-height:normal'><b><span style='font-size:18.0pt;
 font-family:"Times New Roman",serif'>Cultural and Heritage Value</span></b></p>
-
+<div class="image-wrapper">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Beetal_Goat_Faisalabad_Panjab_Pakistan.jpg/1280px-Beetal_Goat_Faisalabad_Panjab_Pakistan.jpg" alt="Beetal Goat" />
     <div class="caption">Beetal Goat – highly prized for their hardiness and festive value during Eid.</div>
 
 By Marsmux - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=75230905
+</div>
 
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>Livestock
 are deeply woven into the <b>cultural fabric of Pakistan</b>. For rural
@@ -386,10 +392,13 @@ with the mainstream livestock development programs.</span></p>
 font-family:"Times New Roman",serif'>Gaps in Conservation Strategies and
 Consequences of Neglect</span></b></p>
 
+<div class="image-wrapper">
     <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Tharparkar_01.JPG" alt="Tharparkar Cattle Bull" />
     <div class="caption">Tharparkar cattle – essential to desert economies, adapted to high heat and scarce water.</div>
 
 By Pavanaja - Own work, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=31865339
+</div>
+
 <p class=MsoNormal style='line-height:normal'><span style='font-family:"Times New Roman",serif'>A
 critical look at Pakistan’s current approach reveals several <b>gaps in its
 strategy for conserving native livestock breeds</b>:</span></p>
