--- a/conservation.html
+++ b/conservation.html
@@ -5,78 +5,79 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Conserving Pakistan’s Native Livestock Breeds</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-    }
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #f5f5f5;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
+  }
 
-    header {
-      background: #006400;
-      color: white;
-      text-align: center;
-      padding: 2rem 1rem;
-    }
+  header {
+    background: #006400;
+    color: white;
+    text-align: center;
+    padding: 2rem 1rem;
+  }
 
+  header h1 {
+    margin: 0;
+    font-size: 2.5rem;
+  }
+
+  header p {
+    font-size: 1.2rem;
+  }
+
+  article {
+    max-width: 900px;
+    margin: 2rem auto;
+    padding: 2rem;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.1);
+  }
+
+  article h1, article h2 {
+    color: #2a2a2a;
+    margin-top: 2rem;
+  }
+
+  article img {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+    margin: 1rem 0;
+    display: block;
+  }
+
+  .caption {
+    font-size: 0.9rem;
+    text-align: center;
+    color: #555;
+    margin-top: -10px;
+    margin-bottom: 20px;
+  }
+
+  ul {
+    margin-left: 1.5rem;
+    padding-left: 1rem;
+  }
+
+  footer {
+    text-align: center;
+    padding: 1rem;
+    background: #333;
+    color: white;
+  }
+
+  @media (max-width: 600px) {
     header h1 {
-      margin: 0;
-      font-size: 2.5rem;
+      font-size: 1.8rem;
     }
-
-    header p {
-      font-size: 1.2rem;
-    }
-
-    article {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 2rem;
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
-    }
-
-    article h1, article h2 {
-      color: #2a2a2a;
-      margin-top: 2rem;
-    }
-
-    article img {
-      width: 100%;
-      max-height: 400px;
-      object-fit: cover;
-      border-radius: 10px;
-      margin: 1rem 0;
-    }
-
-    .caption {
-      font-size: 0.9rem;
-      text-align: center;
-      color: #555;
-      margin-top: -10px;
-      margin-bottom: 20px;
-    }
-
-    ul {
-      margin-left: 1.5rem;
-      padding-left: 1rem;
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background: #333;
-      color: white;
-    }
-
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 1.8rem;
-      }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
 
