--- a/conservation.html
+++ b/conservation.html
@@ -43,14 +43,21 @@
     margin-top: 2rem;
   }
 
-  article img {
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
-    border-radius: 10px;
-    margin: 1rem 0;
-    display: block;
-  }
+  .image-wrapper {
+  max-width: 100%;
+  margin: 1.5rem 0;
+  text-align: center;
+}
+
+.image-wrapper img {
+  width: 100%;
+  height: auto;
+  max-height: 500px; /* Optional: cap height */
+  object-fit: cover;
+  border-radius: 10px;
+  display: block;
+  margin: 0 auto;
+}
 
   .caption {
     font-size: 0.9rem;
