--- a/conservation.html
+++ b/conservation.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Conserving Pakistan’s Native Livestock Breeds</title>
+
   
 <div id="google_translate_element"></div>
 <script type="text/javascript">
@@ -17,8 +18,21 @@
 <script type="text/javascript" 
   src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
 </script>
+<div id="google_translate_element" style="position: fixed; top: 20px; right: 20px; z-index: 1000;"></div>
 
 <style>
+<style>
+  .goog-te-banner-frame.skiptranslate, 
+  .goog-logo-link, 
+  .goog-te-gadget span {
+    display: none !important;
+  }
+
+  body {
+    top: 0px !important; 
+  }
+</style>
+
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: #f5f5f5;
@@ -713,5 +727,21 @@ environment, and our heritage.</span></p>
   <footer>
     <p>&copy; 2025 Pakistani Livestock Blog</p>
   </footer>
+<script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement(
+      {
+        pageLanguage: 'en',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+      },
+      'google_translate_element'
+    );
+  }
+</script>
+<script type="text/javascript" 
+  src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+</script>
+
+
 </body>
 </html>
